--- a/WEEK 3/main.css
+++ b/WEEK 3/main.css
@@ -22,7 +22,7 @@ nav.navbar ul {
     text-align: center;
 }
 nav.navbar li {
-    border-bottom: 2px solid darkred;
+    border-bottom: 2px solid rgb(89, 0, 255);
 }
 nav.navbar li:last-child {
     border-bottom: none;
@@ -31,13 +31,14 @@ nav.navbar a {
     font-size: 22px;
     line-height: 36px;
     text-decoration: none;
-    color: darkred;
+    color: rgb(89, 0, 255);
 }
 @media(min-width: 768px){
     .container {
-        background-color: dodgerblue;
+        
         width: 750px;
         margin: 0px auto;
+        background-color: rgb(9, 255, 0);
     }
 
     nav.navbar li {
@@ -48,6 +49,6 @@ nav.navbar a {
 @media(min-width: 992px){
     .container {
         width: 960px;
-        background-color: plum;
+        background-color: rgb(0, 217, 255);
     }
 }
