--- a/CLASS 2/main.css
+++ b/CLASS 2/main.css
@@ -13,7 +13,7 @@ nav.navbar {
     
     width: 100%;
     padding: 10px 0px;
-    background-color: rgb(4, 0, 255);
+    background-color: rgb(98, 96, 223);
 }
 nav.navbar ul {
     list-style: none;
@@ -22,16 +22,17 @@ nav.navbar ul {
     text-align: center;
 }
 nav.navbar li {
-    border-bottom: 2px solid rgb(89, 0, 255);
+    border-right: 2px solid black;
+    padding: 0px 10px;
 }
 nav.navbar li:last-child {
-    border-bottom: none;
+    border-right: none;
 }
 nav.navbar a {
     font-size: 22px;
     line-height: 36px;
     text-decoration: none;
-    color: rgb(89, 0, 255);
+    color: black;
 }
 @media(min-width: 768px){
     .container {
@@ -49,6 +50,6 @@ nav.navbar a {
 @media(min-width: 992px){
     .container {
         width: 960px;
-        background-color: rgb(0, 217, 255);
+        background-color:rgb(98, 96, 223);
     }
 }
