--- a/CLASS 2/main.css
+++ b/CLASS 2/main.css
@@ -7,13 +7,15 @@ body {
     width: 100%;
     min-height: 300px;
     background-color: rgb(255, 25, 0);
+    
+
 }
 
 nav.navbar {
     
     width: 100%;
     padding: 10px 0px;
-    background-color: rgb(98, 96, 223);
+    background-color: rgb(138, 137, 212);
 }
 nav.navbar ul {
     list-style: none;
@@ -39,6 +41,8 @@ nav.navbar a {
         
         width: 750px;
         margin: 0px auto;
+        padding-left: 20px;
+        padding-right: 20px;
         background-color: rgb(9, 255, 0);
     }
 
@@ -50,6 +54,6 @@ nav.navbar a {
 @media(min-width: 992px){
     .container {
         width: 960px;
-        background-color:rgb(98, 96, 223);
+        background-color:rgb(138, 137, 212);
     }
 }
