--- a/ASSIGNMENT 3/main.css
+++ b/ASSIGNMENT 3/main.css
@@ -1,21 +1,32 @@
 body {
     margin: 0px;
+    background-image: url(assets/images/wallpaper.jpg);
 }
 
-.container {
-    
-    width: 100%;
-    min-height: 300px;
-    background-color: rgb(255, 25, 0);
+.container2 {
+    background-color: rgb(201, 175, 248);
+    margin: 0px auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 30px;
+    padding-top: 30px;
     
 
+}
+
+img {
+    float: left;
+    width: 100%;
+    margin: 20px auto;
+    min-height: 200px;
+    margin-bottom: 20px;
 }
 
 nav.navbar {
     
     width: 100%;
     padding: 10px 0px;
-    background-color: rgb(138, 137, 212);
+    background-color: rgb(172, 83, 172);
 }
 nav.navbar ul {
     list-style: none;
@@ -37,13 +48,13 @@ nav.navbar a {
     color: black;
 }
 @media(min-width: 768px){
-    .container {
+    .container2 {
         
         width: 750px;
         margin: 0px auto;
         padding-left: 20px;
         padding-right: 20px;
-        background-color: rgb(9, 255, 0);
+        background-color: rgb(201, 175, 248);
     }
 
     nav.navbar li {
@@ -52,8 +63,120 @@ nav.navbar a {
 }
 
 @media(min-width: 992px){
-    .container {
+    .container2 {
         width: 960px;
-        background-color:rgb(138, 137, 212);
+        background-color:rgb(201, 175, 248);
+    }
+}
+
+.container {
+    margin: 0px auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: rgb(0, 0, 0);
+}
+
+.red {
+    background-color: lightcoral;
+}
+
+.green {
+    background-color: lightgreen;
+}
+
+.blue {
+    background-color: lightblue;
+}
+
+.yellow {
+    background-color: rgb(245, 245, 133);
+}
+
+.cyan {
+    background-color: rgb(150, 250, 250);
+}
+
+.purple {
+    background-color: plum;
+}
+.floater-section {
+float: left;
+width: 100%;
+margin: 20px auto;
+min-height: 200px;
+margin-bottom: 20px;
+
+}
+
+.clearfix {
+    clear: both;
+}
+
+/******small screen******/ 
+
+@media (min-width: 450px){
+    .floater-section{
+        width: 50%;
+    }
+    .small-width-100{
+        width: 100%;
+    }
+
+    .small-width-50{
+        width: 50%;
+    }
+
+    .small-width-33{
+        width: 33.3333%;
+    }
+
+    .small-width-25{
+        width: 25%;
+    }
+
+}
+
+/******medium screen******/ 
+
+@media (min-width: 768px) {
+    .floater-section {
+     width: 33.3333%    
+    }
+   
+    .med-width-100 {
+        width: 100%;
+    }
+    .med-width-50 {
+        width: 50%;
+    }
+    .med-width-33 {
+        width: 33.3333%;
+    }
+    .med-width-25{
+        width: 25%;
+    }
+}
+
+/******large screen******/ 
+
+@media (min-width: 768px) {
+    .floater-section {
+        margin-left: 30px;
+        margin-right: 30px;
+     width: 25%    
+    }
+
+    .large-width-100 {
+        width: 100%;
+    }
+    .large-width-50 {
+        width: 50%;
+    }
+    .large-width-33 {
+        width: 33.3333%;
+    }
+
+    .large-width-25{
+        width: 25%;
     }
 }
